--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,15 +1,16 @@
-identidock:
-  build: .
-  expose:
-    - "9090"
-  environment:
-    ENV: PROD
-    links:
-      - dnmonster
-      - redis
+services:
+  identidock:
+    build: .
+    expose:
+      - "9090"
+    environment:
+      ENV: PROD
+      links:
+        - dnmonster
+        - redis
 
-dnmonster:
-  image: amouat/dnmonster:latest
+  dnmonster:
+    image: amouat/dnmonster:latest
 
-redis:
-  image: redis
+  redis:
+    image: redis
